--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,138 @@
-.App {
-  text-align: center;
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+header {
+  background-color: #f2f2f2;
+  padding: 10px;
+  text-align: left;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+header img {
+  max-width: 80px;
+}
+
+main {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+h1 {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+form {
+  border: 1px solid #ccc;
+  padding: 20px;
+  border-radius: 5px;
+}
+
+label {
+  font-size: 14px;
+  display: block;
+  font-weight: bolder;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+input[type="text"],
+input[type="email"],
+select {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+@media screen and (max-width: 768px) {
+  main {
+      padding: 10px;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+@media screen and (max-width: 480px) {
+  h1 {
+      font-size: 20px;
+  }
+}
+
+.name-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.name-field {
+  flex: 1;
+  margin-right: 10px;
+}
+
+.name-field label {
+  display: block;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.name-field input[type="text"] {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.field#curp {
+  margin-bottom: 20px;
+}
+
+.contact-container {
+  display: flex;
+  margin-top: 20px;
+}
+
+.contact-field {
+  flex: 1;
+  margin-right: 10px;
+}
+
+.contact-field label {
+  display: block;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.contact-field input[type="text"],
+.contact-field input[type="email"] {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.field#nivel,
+.field#municipio,
+.field#asunto {
+  margin-bottom: 30px;
+}
+
+.submit-button {
+  margin-top: 20px;
+  text-align: right;
+}
+
+.submit-button button {
+  background-color: #8d42f5;
   color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: bold;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.submit-button button:hover {
+  background-color: #6c42f5;
 }
