--- a/src/App.css
+++ b/src/App.css
@@ -136,3 +136,8 @@ select {
 .submit-button button:hover {
   background-color: #6c42f5;
 }
+
+.error-message {
+  font-size: 12px;
+  color: red;
+}
